[package]
name = "recommendation-cross-checker"
version = "0.1.0"
authors = ["Svätopluk Hanzel <svatoplukhanzel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
serde = "1.0.114"
serde_yaml = "0.8.13"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
ctrlc = "3.1.6"
